# personal_ai_financial_adviser

./: .gitignore  app.py  ingest_kb.py  llm_layer.py  pyproject.toml  rag.py  requirements.txt  streamlit_app.py  testing_prompts.txt  train_all.py
advice_engine/: __init__.py  artifacts.py  config.py  features.py  inference.py  pipeline.py
advice_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kb/: budget_50_30_20.md  debt_repayment_avalanche.md  debt_repayment_snowball.md  emergency_fund.md  high_savings.md  insurance_health.md  insurance_life.md  investment_basics.md  low_savings.md  mid_savings.md  retirement_advanced.md  retirement_planning.md
markdowns/: 04_summary.md  05_summary.md  06_summary.md
models/: kmeans_05B.pkl  savings_goal_dt.pkl  savings_goal_dt_columns.pkl  savings_goal_xgb.pkl  savings_linear_reg.pkl  savings_linear_reg_columns.pkl  savings_xgb_reg.pkl  savings_xgb_reg_columns.pkl  scaler_05B.pkl
notebooks/: 01_data_exploration.ipynb  02_regression_model.ipynb  03_regression_insights.ipynb  05_clustering_segmentation.ipynb  05_clustering_with_models.ipynb  06_financial_advice_engine.ipynb  07_interface_prototype.ipynb
notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb  02_regression_model-checkpoint.ipynb  03_regression_insights-checkpoint.ipynb  05A_clustering_mock-checkpoint.ipynb  (+6 more)
outputs/: 05_cluster_profiles.csv  06_summary.md  project_flow.md
reports/: feature_catalog.json  train_summary.json
templates/: index.html  structured.html
vectordb/: chroma.sqlite3
vectordb_backup/: chroma.sqlite3
